implement implicit for sample